syntax = "proto3";
option java_multiple_files = true;
option java_package = "com.moirae.rosettaflow.grpc.service";
package common;


message TaskReadyGoReq {
    string task_id = 1;
    string contract_id = 2;       // 目前即算法本身
    string data_id = 3;
    string party_id = 4;          // 当前参与方id
    string env_id = 5;
    message Peer {                // 各参与方信息
        string ip = 1;
        int32 port = 2;
        string party_id = 3;      // 达成共识后为每个参与方分配的唯一标识
        string name = 4;          // 为了可读性
    }
    repeated Peer peers = 6;
    string contract_cfg = 7;      // 算法配置json
    repeated string data_party = 8;         // 各数据方的party_id
    repeated string computation_party = 9;  // 各计算方的party_id
    repeated string result_party = 10;      // 各结果方的party_id
    uint64 duration = 11;       // 任务预算计算时长(单位: ms)
}

message TaskReadyGoReply {
    bool ok = 1;
    string msg = 2;
}

message TaskCancelReq {
    string task_id = 1;
    string party_id = 2;
}

message TaskCancelReply {
    bool ok = 1;
    string msg = 2;
}
